# ncursesplusplus

./: .gitignore  CMakeLists.txt
demos/: demo.main.cpp  demo_menu.hpp
demos/animation/: animation_demo.hpp
demos/colors/: palette_view.hpp
demos/composites/: composites.hpp
demos/focus/: focus_demo.hpp
demos/game_of_life/: bitmap.hpp  bitset.hpp  cell.hpp  colors.hpp  controls_box.hpp  coordinate.hpp  coordinates.hpp  exporters.hpp  files_box.hpp  filetype.hpp  game_of_life_engine.hpp  get_life_1_05.hpp  get_life_1_06.hpp  get_plaintext.hpp  get_rle.hpp  gol_demo.cpp  gol_demo.hpp  gol_widget.cpp  gol_widget.hpp  make_break.hpp  pattern.hpp  pattern_store.hpp  patterns.hpp  patterns_rulesets_box.hpp  rule.hpp  rule_store.hpp  side_panel.hpp  status_box.hpp
demos/glyph_paint/: glyph_paint.cpp  glyph_paint.hpp  glyph_selector.cpp  glyph_selector.hpp  options_box.cpp  options_box.hpp  paint_area.cpp  paint_area.hpp  side_pane.hpp  trait_box.hpp
demos/graph/: graph_demo.hpp
demos/layout/: layout_demo.hpp
demos/notepad/: notepad.cpp  notepad.hpp
demos/palette/: all_colors_display.cpp  all_colors_display.hpp  color_control.cpp  color_control.hpp  color_definition_setter.cpp  color_definition_setter.hpp  color_display.hpp  export_panel.cpp  export_panel.hpp  palette_demo.hpp  palette_helpers.cpp  palette_helpers.hpp  value_control.cpp  value_control.hpp
demos/snake/: snake.hpp
docs/design/: border-refactor.md
docs/manual/: animation.md  building-with-existing-widgets.md  creating-new-widgets.md  event-loop.md  events.md  fade.md  getting-started-with-widgets.md  getting-started.md  layouts.md  main-function.md  pipe.md  quick-prototyping.md  rainbow.md  signals.md
include/ncursesplusplus/: ncursesplusplus.h
include/ncursesplusplus/common/: filter_iterator.hpp  identity.hpp  invoke_trait.hpp  lockable.hpp  meta.hpp  overload.hpp  priority_queue.hpp  range.hpp  transform_iterator.hpp  transform_view.hpp
include/ncursesplusplus/painter/: brush.hpp  color.hpp  dynamic_colors.hpp  glyph.hpp  glyph_matrix.hpp  glyph_string.hpp  painter.hpp  trait.hpp
include/ncursesplusplus/painter/detail/: find_empty_space.hpp  is_paintable.hpp  screen.hpp  screen_descriptor.hpp  screen_mask.hpp  staged_changes.hpp
include/ncursesplusplus/painter/palette/: amstrad_cpc.hpp  apple_ii.hpp  ashes.hpp  basic.hpp  basic8.hpp  cga.hpp  commodore_64.hpp  commodore_vic20.hpp  dawn_bringer16.hpp  dawn_bringer32.hpp  en4.hpp  gameboy.hpp  gameboy_pocket.hpp  macintosh_ii.hpp  msx.hpp  nes.hpp  savanna.hpp  secam.hpp  stormy6.hpp  teletext.hpp  thomson_m05.hpp  windows.hpp  windows_console.hpp  zx_spectrum.hpp
include/ncursesplusplus/painter/utility/: wchar_to_bytes.hpp
include/ncursesplusplus/system/: animation_engine.hpp  event.hpp  event_fwd.hpp  event_loop.hpp  event_name.hpp  key.hpp  mouse.hpp  shortcuts.hpp  system.hpp
include/ncursesplusplus/system/detail/: event_engine.hpp  event_print.hpp  event_queue.hpp  filter_send.hpp  find_widget_at.hpp  focus.hpp  interval_event_loop.hpp  is_sendable.hpp  send.hpp  timer_event_loop.hpp  user_input_event_loop.hpp
include/ncursesplusplus/terminal/: dynamic_color_engine.hpp  input.hpp  output.hpp  terminal.hpp  terminal_error.hpp
include/ncursesplusplus/widget/: align.hpp  area.hpp  array.hpp  border.hpp  cursor.hpp  focus_policy.hpp  growth.hpp  layout.hpp  pair.hpp  pipe.hpp  point.hpp  size_policy.hpp  tuple.hpp  widget.hpp  widget_slots.hpp
include/ncursesplusplus/widget/detail/: border_offset.hpp  graph_tree.hpp  link_lifetimes.hpp  memfn_signature.hpp
include/ncursesplusplus/widget/layouts/: fixed.hpp  float.hpp  horizontal.hpp  opposite.hpp  passive.hpp  selecting.hpp  set.hpp  stack.hpp  vertical.hpp
include/ncursesplusplus/widget/layouts/detail/: layout_span.hpp  linear_layout.hpp  shared_space.hpp  unique_space.hpp
include/ncursesplusplus/widget/widgets/: accordion.hpp  banner.hpp  button.hpp  button_list.hpp  checkbox.hpp  color_select.hpp  confirm_button.hpp  cycle_box.hpp  cycle_stack.hpp  graph.hpp  hideable.hpp  horizontal_slider.hpp  label.hpp  line_edit.hpp  log.hpp  matrix_display.hpp  menu.hpp  menu_stack.hpp  notify_light.hpp  number_edit.hpp  open_file.hpp  save_file.hpp  scrollbar.hpp  selectable.hpp  spinner.hpp  status_bar.hpp  text_display.hpp  textbox.hpp  tile.hpp  titlebar.hpp  toggle_button.hpp  vertical_slider.hpp
include/ncursesplusplus/widget/widgets/detail/: nearly_equal.hpp  slider_logic.hpp  textbox_base.hpp
src/: CMakeLists.txt
src/painter/: find_empty_space.cpp  glyph_matrix.cpp  painter.cpp  screen.cpp  screen_mask.cpp
src/system/: animation_engine.cpp  event_loop.cpp  find_widget_at.cpp  focus.cpp  system.cpp  timer_event_loop.cpp  user_input_event_loop.cpp
src/terminal/: dynamic_color_engine.cpp  input.cpp  output.cpp  terminal.cpp
src/widget/: border.cpp  border_offset.cpp  cycle_box.cpp  graph_tree.cpp  horizontal_slider.cpp  line_edit.cpp  log.cpp  menu.cpp  text_display.cpp  textbox.cpp  textbox_base.cpp  vertical_slider.cpp  widget.cpp  widget_slots.cpp
tests/: checkbox.test.cpp
